--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ngneat/hot-toast": "^4.1.0",
+    "@ngneat/overview": "^3.0.0",
+    "@ngneat/until-destroy": "^9.2.2",
     "@popperjs/core": "^2.11.6",
     "@types/popper.js": "^1.11.0",
     "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^6.0.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
